# ur5_projeto_ufba

./: CMakeLists.txt  package.xml
config/: config.rviz
launch/: rviz_ur5.launch  rviz_ur5_gripper.launch  spawn_ur5_eff_controller.launch  spawn_ur5_gripper.launch
materials/scripts/: ufba_logo.material
meu_projeto_ur/: CMakeLists.txt  package.xml
meu_projeto_ur/scripts/: object_detector_service.py
meu_projeto_ur/src/: pick_place_ur_cubes.cpp
meu_projeto_ur/srv/: DetectObjects.srv
scripts/: camera_viewer.py
urdf/: camera.xacro  ur5_projeto.xacro  ur5_projeto_gripper.xacro
worlds/: ufba1.world  ufba2.world  ufba3  ufba3.world  ufba4.world
