<?xml version="1.0"?>
<package format="2">
  <name>meu_projeto_ur</name>
  <version>0.0.0</version>
  <description>The meu_projeto_ur package</description>

  <maintainer email="francisco@todo.todo">francisco</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>rospy</depend>

  <depend>cv_bridge</depend>

  <depend>geometry_msgs</depend>

  <depend>sensor_msgs</depend>
  
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>


  <export>
    </export>
</package>